@@ -120,6 +120,7 @@ img_save_slideshow( img_window_struct *img,
 		g_key_file_set_integer(img_key_file,conf, "placing",		entry->placing);
 		g_key_file_set_string (img_key_file, conf,"font",			font_desc);
 		g_key_file_set_double_list(img_key_file, conf,"font color",entry->font_color,4);
+        g_key_file_set_double_list(img_key_file, conf,"font bgcolor",entry->font_bgcolor,4);
 		g_free(font_desc);
 		g_free(conf);
 	}
@@ -179,7 +180,7 @@ img_load_slideshow( img_window_struct *img,
 	void (*render);
 	GHashTable *table;
 	gchar      *spath, *conf;
-	gdouble    *color, *font_color;
+	gdouble    *color, *font_color, *font_bgcolor;
 	gboolean    old_file = FALSE;
 	gboolean    first_slide = TRUE;
 
@@ -382,6 +383,7 @@ img_load_slideshow( img_window_struct *img,
 				placing 	  = g_key_file_get_integer(img_key_file, conf, "placing",		NULL);
 				font_desc     = g_key_file_get_string (img_key_file, conf, "font", 			NULL);
 				font_color 	  = g_key_file_get_double_list(img_key_file, conf, "font color", NULL, NULL );
+                font_bgcolor  = g_key_file_get_double_list(img_key_file, conf, "font bgcolor", NULL, NULL );
 
 				/* Get the mem address of the transition */
 				spath = (gchar *)g_hash_table_lookup( table, GINT_TO_POINTER( transition_id ) );
@@ -436,7 +438,7 @@ img_load_slideshow( img_window_struct *img,
 					img_set_slide_text_info( slide_info, img->thumbnail_model,
 											 &iter, subtitle, anim_id,
 											 anim_duration, text_pos, placing,
-											 font_desc, font_color, img );
+											 font_desc, font_color, font_bgcolor, img );
 
 					/* If we're loading the first slide, apply some of it's
 				 	 * data to final pseudo-slide */
