@@ -1,5 +1,6 @@
 /*
 ** Copyright (C) 2009 Tadej Borovšak <tadeboro@gmail.com>
+** Copyright (C) 2010 Robert Chéramy <robert@cheramy.net>
 **  
 ** This program is free software; you can redistribute it and/or modify
 ** it under the terms of the GNU General Public License as published by
@@ -51,6 +52,7 @@ img_render_subtitle( cairo_t              *cr,
 					 gchar                *subtitle,
 					 PangoFontDescription *font_desc,
 					 gdouble              *font_color,
+                     gdouble              *font_bgcolor,
 					 TextAnimationFunc     func,
 					 gdouble               progress );
 #endif
